syntax = "proto3";

package eu.surething_project.core;

option java_multiple_files = true;
option java_package = "eu.surething_project.core.grpc";
option java_outer_classname = "LocProofProto";

import "google/protobuf/any.proto";
import "loc_time.proto";
import "signature.proto";
import "loc_claim.proto";
import "loc_endorse.proto";

// Location Proof generated by the prover to send to the verifier
message LocationProof {
	// verifier unique id
	string proofId = 1;
	// The LocationClaim of the prover
	SignedLocationClaim locClaim = 2;
	// The List of LocationEndorsements that the prover wants to send
	repeated SignedLocationEndorsement locationEndorsements = 3;
	// time of verification - in one of alternative time schemas
	Time time = 4;
	// type of the evidence
	string evidenceType = 5;
	// verification evidence
	google.protobuf.Any evidence = 6;
}

message SignedLocationProof {
	LocationProof verification = 1;
	Signature proverSignature = 2;
}